--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,53 @@
 
     <!-- Fontawesome css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/font-awesome.min.css">
+    
+    <!-- Rev Slider css -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/js/revolution-slider/css/settings.css">
+
+    <!-- Magnific-popup css -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
+
+    <!-- Owl Carousel css -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.theme.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.carousel.css">
+
+    <!-- Main css -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 
     <title>React App</title>
   </head>
   <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    
+    <!-- Bootstrap --> 
+    <script src="%PUBLIC_URL%/js/jquery-2.1.4.min.js"></script> 
+    <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script> 
+
+    <!-- Popup --> 
+    <script src="%PUBLIC_URL%/js/jquery.magnific-popup.min.js"></script> 
+    <script src="%PUBLIC_URL%/js/magnific-popup-options.js"></script> 
+
+    <!-- Carousel --> 
+    <script src="%PUBLIC_URL%/js/owl.carousel.js"></script> 
+
+    <!-- Sticky Header --> 
+    <script src="%PUBLIC_URL%/js/jquery.sticky.js"></script> 
+
+    <!-- Revolution Slider --> 
+    <script type="text/javascript" src="%PUBLIC_URL%/js/revolution-slider/js/jquery.themepunch.tools.min.js"></script> 
+    <script type="text/javascript" src="%PUBLIC_URL%/js/revolution-slider/js/jquery.themepunch.revolution.min.js"></script> 
+
+    <!-- Parallax --> 
+    <script src="%PUBLIC_URL%/js/jquery.parallax.js"></script> 
+
+    <!-- Counter --> 
+    <script src="%PUBLIC_URL%/js/counter.js"></script> 
+    <script src="%PUBLIC_URL%/js/smoothscroll.js"></script> 
+
+    <!-- Custom --> 
+    <script src="%PUBLIC_URL%/js/custom.js"></script>
   </body>
 </html>
