--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,12 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
 
     <!-- Fontawesome css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/font-awesome.min.css">
-    
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+  />
     <!-- Rev Slider css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/js/revolution-slider/css/settings.css">
 
@@ -31,7 +35,7 @@
     <!-- Main css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 
-    <title>React App</title>
+    <title>My Lawyer</title>
   </head>
   <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
