--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <!-- Main css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 
-    <title>My Lawyer</title>
+    <title>Lawyer Directory</title>
   </head>
   <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
