--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- Bootstrap css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Fontawesome css -->
     <link
@@ -44,7 +44,7 @@
     
     <!-- Bootstrap --> 
     <script src="%PUBLIC_URL%/js/jquery-2.1.4.min.js"></script> 
-    <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script> 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <!-- Popup --> 
     <script src="%PUBLIC_URL%/js/jquery.magnific-popup.min.js"></script> 
